--- a/pom.xml
+++ b/pom.xml
@@ -63,5 +63,11 @@
             <version>1.6.0</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.8.0-M1</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
