--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>me.braydon</groupId>
-    <artifactId>Astro</artifactId>
+    <artifactId>Astro</artifactId>\
     <version>1.0.5</version>
 
     <properties>
@@ -60,7 +60,7 @@
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-            <version>2.8.9</version>
+            <version>2.8.7</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
